--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run test:build"
+      "pre-push": "npm run lint"
     }
   },
   "devDependencies": {
