--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "10.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "babel-eslint": "10.0.1",
-    "husky": "^1.3.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^1.3.1"
   }
 }
