--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build_script": "react-scripts build",
+    "build": "yarn test && yarn build_script",
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test --watchAll",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
