--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "5.16.0",
@@ -61,6 +60,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.3.1"
+    "husky": "^1.3.1",
+    "babel-eslint": "10.0.1"
   }
 }
