--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
-
+node_js:
+- '11'
 cache:
   directories: node_modules
-
 before_script:
 - yarn build
-
 after_success:
 - yarn test:coverage
