--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ deploy:
   api_key:
     secure: "d9263ec2-43c1-499b-a412-43fcd25f2101"
   app: credere-test
+  on:
+    repo: wellitongervickas/credere-test
