--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 deploy:
   provider: heroku
   api_key:
-    secure: "d7c89526-d511-4cc2-86cf-b0fe27d12e74"
+    secure: "secure-key"
   app: credere-test
   on:
     repo: wellitongervickas/credere-test
